--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,27 @@
  *= require_self
  */
 
-@import "semantic-ui";
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #151515;
+  color: #e4e4e4;
+}
+
+li {
+  list-style: none;
+}
+
+header {
+  border-bottom: 1px solid #8b8b8b;
+}
+
+
