--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,29 @@
 <header>
-  <div class="ui stackable  column grid">
-    <a href="/" class="left floated column">
+  <nav class="navbar navbar-expand-lg">
+    <a href="/" class="navbar-brand">
       <%= image_tag asset_path('logo.png'), :size => '150x100' %>
     </a>
-    <ul class="ui inverted secondary pointing menu right floated column">
-      <% if instructor_signed_in? %>
-        <li></li>
-      <% elsif user_signed_in? %>
-        <li></li>
-      <% else %>
-        <li><%= link_to "About", about_path, class: 'item' %></li>
-      <% end %>
-    </ul>
-  </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto font-weight-bold pr-5">
+        <% if instructor_signed_in? %>
+          <li><%= link_to "会員一覧", root_path, class: 'nav-link' %></li>
+          <li><%= link_to "マイページ", root_path, class: 'nav-link' %></li>
+          <li><%= link_to "ログアウト", destroy_instructor_session_path, class: 'nav-link', method: :delete %></li>
+        <% elsif user_signed_in? %>
+          <li class="nav-link">こんにちは、<%= current_user.firstname %>さん！</li>
+          <li><%= link_to "マイページ", root_path, class: 'nav-link' %></li>
+          <li><%= link_to "インストラクター", root_path, class: 'nav-link' %></li>
+          <li><%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link, method: :delete' %></li>
+        <% else %>
+          <li><%= link_to "About", about_path, class: 'nav-link' %></li>
+          <li><%= link_to "インストラクター", root_path, class: 'nav-link' %></li>
+          <li><%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %></li>
+          <li><%= link_to "ログイン", user_session_path, class: 'nav-link', method: :post %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 </header>
