--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,6 +1,8 @@
 <% flash.each do |message_type, message| %>
-  <div class="<%= flash_class(message_type) %> close">
-    <i class="close icon"></i>
+  <div class="alert <%= flash_class(message_type) %> alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="閉じる">
+      <span aria-hidden="true">&times;</span>
+    </button>
     <%= message %>
   </div>
 <% end %>
