--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="pt-3 pb-4">
   <% if instructor_signed_in? %>
     <div class="footer-logo text-center">
       <p>LYbody</p>
