--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg">
     <a href="/" class="navbar-brand">
-      <%= image_tag asset_path('logo.png'), :size => '150x100' %>
+      <%= image_tag asset_path('logo'), :size => '160x100' %>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
           <li><%= link_to "About", about_path, class: 'nav-link' %></li>
           <li><%= link_to "インストラクター", root_path, class: 'nav-link' %></li>
           <li><%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %></li>
-          <li><%= link_to "ログイン", user_session_path, class: 'nav-link', method: :post %></li>
+          <li><%= link_to "ログイン", new_user_session_path, class: 'nav-link' %></li>
         <% end %>
       </ul>
     </div>
