--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -10,10 +10,10 @@
 
   <div class="main-images mt-5 pt-5">
     <ul class="image-list d-flex mt-5">
-      <li class="image-list-item col-3"><%= image_tag asset_path('logo') %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('logo') %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('logo') %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('logo') %></li>
+      <li class="image-list-item col-3"><%= image_tag asset_path('top1'), :size => '300x200' %></li>
+      <li class="image-list-item col-3"><%= image_tag asset_path('top2'), :size => '300x200' %></li>
+      <li class="image-list-item col-3"><%= image_tag asset_path('top3'), :size => '300x200' %></li>
+      <li class="image-list-item col-3"><%= image_tag asset_path('top4'), :size => '300x200' %></li>
     </ul>
   </div>
 </div>
