--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="about col-8 offset-2">
+    <div class="about col-8 offset-2 mb-5 pb-5">
       <h2 class="border-heading-bottom">About us</h2>
       <div class="about-top-content p-4 mt-5">
         <p class="mb-0">
           LYbodyは「Love your body」をコンセプトにしたオンラインパーソナルジムです。<br>
 
-          自宅で本格的にbody makeがしたい方、自宅でのトレーニングのモチベーションを上げたい方、<br>
+          自宅で本格的にbody makeがしたい方、自宅でのトレーニングのモチベーションを上げたい方、
           自宅でヨガやダンスを習ってみたい方などに向けて、様々なジャンルを提供するインストラクターが在籍しています。<br>
 
           ページ上下にあるインストラクターのリンクをクリックし、<br>
