--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ml-auto font-weight-bold pr-5">
+      <ul class="navbar-nav ml-auto pr-5">
         <% if instructor_signed_in? %>
           <li><%= link_to "会員一覧", root_path, class: 'nav-link' %></li>
           <li><%= link_to "マイページ", root_path, class: 'nav-link' %></li>
