--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,19 +1,21 @@
-<div class="main-top col-10 offset-1">
+<div class="main-top col-12 mt-5">
   <div class="main-content d-flex mt-3">
-    <div class="img col-7">
-      <%= image_tag asset_path('top-img'), :size => '800x260' %>
+    <div class="img col-7 ml-3">
+      <%= image_tag asset_path('top-img'), :size => '1100x400' %>
     </div>
-    <div class="main-content-sub col-4">
+    <div class="main-content-sub col-4 pl-5">
       <p>LYbodyは完全オンラインの <br> パーソナルジムです！ <br> 自宅で最高のトレーニングを！</p>
     </div>
   </div>
 
-  <div class="main-images mt-5 pt-5">
-    <ul class="image-list d-flex mt-5">
-      <li class="image-list-item col-3"><%= image_tag asset_path('top1'), :size => '300x200' %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('top2'), :size => '300x200' %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('top3'), :size => '300x200' %></li>
-      <li class="image-list-item col-3"><%= image_tag asset_path('top4'), :size => '300x200' %></li>
-    </ul>
+  <div class="main-images my-5 py-5">
+    <div class="image-list-top d-flex mt-5">
+      <li class="image-list-item col-6"><%= image_tag asset_path('top1'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top2'), class: 'img-fluid' %></li>
+    </div>
+    <div class="image-list-bottom d-flex my-5 pt-5">
+      <li class="image-list-item col-6"><%= image_tag asset_path('top3'), class: 'img-fluid' %></li>
+      <li class="image-list-item col-6"><%= image_tag asset_path('top4'), class: 'img-fluid' %></li>
+    </div>
   </div>
 </div>
