--- a/app/views/shared/_login-form.html.erb
+++ b/app/views/shared/_login-form.html.erb
@@ -1,13 +1,13 @@
 <div class="col-10 offset-1 pt-3">
-  <%= form_with model: model, url: url, local: true do |f| %>
+  <%= form_with model: model, url: url, id: 'login-form', local: true do |f| %>
     <dl>
       <dt><%= f.label :email, "メールアドレス" %></dt>
       <dd>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'lybody@example.com', class: 'form-control col-7' %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'lybody@example.com', class: 'form-control col-7 validate[required, custom[email]]' %>
         <dt></dt> <small class="form-text text-muted email-help">ご登録頂いているメールアドレスをご入力ください。</small>
       </dd>
       <dt class="mt-4"><%= f.label :password, "パスワード" %></dt>
-      <dd class="mt-4"><%= f.password_field :password , autofocus: true, autocomplete: "current-password", placeholder: 'パスワードを入力してください', class: 'form-control col-7' %></dd>
+      <dd class="mt-4"><%= f.password_field :password , autofocus: true, autocomplete: "current-password", placeholder: 'パスワードを入力してください', class: 'form-control col-7 validate[required, minSize[8]]' %></dd>
     </dl>
     <div class="login-button text-center pt-4">
       <%= f.submit "ログインする", class: 'btn btn-outline-light btn-lg px-5 mt-5' %>
