--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'LYbody') %>
+
 <div class="main-top col-12 mt-5">
   <div class="main-content d-flex mt-3">
     <div class="img col-7 ml-3">
