--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,6 +128,32 @@ dl dd {
 }
 
 
+// 前に戻るリンク
+
+.backpage-wrap {
+
+  .backpage {
+    margin-top: 10px;
+    color: #e4e4e4;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+    display: block;
+
+    &:hover, &:active {
+      opacity: 0.6;
+      transition: opacity .3s ease;
+    }
+
+    i {
+      padding-right: 10px;
+    }
+  }
+}
+
 
 // public/top page
 
