--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,3 +1,7 @@
+<% provide(:title, 'About us | LYbody') %>
+
+<%= render 'shared/backpage' %>
+
 <div class="container">
   <div class="row">
     <div class="about col-8 offset-2 mb-5 pb-5">
