[update] signup page layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,15 @@ dl dd {
   }
 }
 
+// 必須アイコン
+
+.essential-icon {
+  background-color: rgb(190, 100, 100);
+  padding: 4px 5px;
+  border-radius: 3px;
+  margin-left: 10px;
+}
+
 
 // public/top page
 
