--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,32 +1,13 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-
 <% provide(:title, '新規登録 | LYbody') %>
 
 <%= render 'shared/backpage' %>
 
+<div class="container">
+  <div class="row">
+    <div class="signup col-8 offset-2 mb-5 pb-5">
+      <h2 class="border-heading-bottom mb-5">新規登録</h2>
+      <p class="mb-5 col-12 ml-2">※<span class="essential-icon ml-2">必須</span> は入力必須項目です。</p>
+      <%= render 'shared/user-form', model: @user, url: user_registration_path, submit_text: '登録する' %>
+    </div>
+  </div>
+</div>
