--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,6 +75,11 @@ header {
 
 footer {
   border-top: 1px solid #8b8b8b;
+
+  a:hover {
+    opacity: 0.6;
+    transition: opacity .3s ease;
+  }
 }
 
 
