--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,10 +13,9 @@
           <li><%= link_to "マイページ", root_path, class: 'nav-link' %></li>
           <li><%= link_to "ログアウト", destroy_instructor_session_path, class: 'nav-link', method: :delete %></li>
         <% elsif user_signed_in? %>
-          <li class="nav-link">こんにちは、<%= current_user.firstname %>さん！</li>
           <li><%= link_to "マイページ", root_path, class: 'nav-link' %></li>
           <li><%= link_to "インストラクター", root_path, class: 'nav-link' %></li>
-          <li><%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link, method: :delete' %></li>
+          <li><%= link_to "ログアウト", destroy_user_session_path, class: 'nav-link', method: :delete %></li>
         <% else %>
           <li><%= link_to "About", about_path, class: 'nav-link' %></li>
           <li><%= link_to "インストラクター", root_path, class: 'nav-link' %></li>
