[update] header logo and links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,11 @@ a {
 }
 
 header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 126px;
+  z-index: 1000;
 
   li {
     padding-right: 30px;
@@ -71,6 +76,11 @@ header {
   .navbar-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(228,228,228,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24' /%3E%3C/svg%3E");
   }
+}
+
+// headerの高さを出す
+.header-height {
+  margin-top: 90px;
 }
 
 footer {
