--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,8 +57,9 @@ header {
   width: 100%;
   position: fixed;
   top: 0;
-  height: 126px;
   z-index: 1000;
+  transition: all .5s;
+  background-color: rgba(21, 21, 21, 0.5);
 
   li {
     padding-right: 30px;
@@ -80,7 +81,8 @@ header {
 
 // headerの高さを出す
 .header-height {
-  margin-top: 90px;
+  width: 100%;
+  height: 90px;
 }
 
 footer {
