--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="signup col-8 offset-2 mb-5 pb-5">
+    <div class="signup col-md-8 offset-md-2 mb-5 pb-5">
       <h2 class="border-heading-bottom mb-5">新規登録</h2>
       <p class="mb-5 col-12 ml-2">※<span class="essential-icon ml-2">必須</span> は入力必須項目です。</p>
       <%= render 'shared/user-form', model: @user, url: user_registration_path, submit_text: '登録する' %>
