--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,6 +124,14 @@ footer {
   }
 }
 
+.border-bottom {
+  border-bottom: 1px solid #8b8b8b !important;
+}
+
+.border {
+  border: 1px solid #8b8b8b !important;
+}
+
 // 前に戻るリンク
 
 .backpage-wrap {
@@ -138,6 +146,7 @@ footer {
     padding: 0;
     appearance: none;
     display: block;
+    margin-bottom: 20px;
 
     &:hover, &:active {
       opacity: 0.6;
@@ -159,6 +168,14 @@ footer {
   margin-left: 10px;
 }
 
+// table
+.table {
+  color: #e4e4e4;
+  table-layout: fixed;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 
 // public/top page
 
@@ -166,7 +183,7 @@ footer {
   position: relative;
 
   .main-content-sub {
-    font-size: 30px;
+    font-size: 2rem;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -176,11 +193,33 @@ footer {
 // public/about page
 
 .about {
-  font-size: 18px;
+  font-size: 1.2rem;
   line-height: 40px;
 
   .about-top-content {
     border: 1px solid #c2a8ff;
+  }
+}
+
+// public/mypage
+
+.mypage {
+  .table {
+    font-size: 1.1rem;
+    .td-left {
+      width: 60%;
+    }
+  }
+
+  .hover-link {
+    &:hover {
+      opacity: 0.6;
+      transition: opacity .3s ease;
+    }
+  }
+
+  .reservation-important {
+    border-bottom: 1px solid #c2a8ff;
   }
 }
 
