--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,7 +26,7 @@
           </li>
         <% elsif user_signed_in? %>
           <li>
-            <%= link_to root_path, class: 'nav-link text-center' do %>
+            <%= link_to my_page_users_path, class: 'nav-link text-center' do %>
               My Page <br> マイページ
             <% end %>
           </li>
