--- a/app/views/shared/_user-form.html.erb
+++ b/app/views/shared/_user-form.html.erb
@@ -29,12 +29,12 @@
     </div>
     <div class="form-group mt-4">
       <%= f.label :password, 'パスワード' %><span class="essential-icon">必須</span>
-      <%= f.password_field :password, autofocus: true, autocomplete: 'new-password', placeholder: '設定したいパスワードを入力してください', class: 'form-control validate[required, minSize[8], custom[onlyLetterNumber]] mt-2', id: 'password' %>
+      <%= f.password_field :password, autofocus: true, autocomplete: 'new-password', placeholder: '設定したいパスワードを入力してください', class: password_class, id: 'password' %>
       <small class="form-text text-muted pt-1"> ※ パスワードは半角英数字８文字以上で入力してください。</small>
     </div>
     <div class="form-group mt-4">
       <%= f.label :password_confirmation, "パスワード（確認）" %><span class="essential-icon">必須</span>
-      <%= f.password_field :password_confirmation, autofocus: true, autocomplete: 'new-password', placeholder: '確認のため、もう一度入力してください', class: 'form-control validate[required, equals[password], minSize[8], custom[onlyLetterNumber]] mt-2' %>
+      <%= f.password_field :password_confirmation, autofocus: true, autocomplete: 'new-password', placeholder: '確認のため、もう一度入力してください', class: password_confirmation_class %>
     </div>
     <div class="submit-button text-center">
       <%= f.submit submit_text, class: 'btn btn-outline-light btn-lg px-5 mt-5' %>
