--- a/app/views/shared/_user-form.html.erb
+++ b/app/views/shared/_user-form.html.erb
@@ -28,12 +28,18 @@
       <small class="form-text text-muted pt-1"> ※ 電話番号はハイフン（-）無しで記入してください。</small>
     </div>
     <div class="form-group mt-4">
-      <%= f.label :password, 'パスワード' %><span class="essential-icon">必須</span>
+      <%= f.label :password, 'パスワード' %>
+      <% if controller.controller_name == 'registrations' && controller.action_name == 'new' %>
+        <span class="essential-icon">必須</span>
+      <% end %>
       <%= f.password_field :password, autofocus: true, autocomplete: 'new-password', placeholder: '設定したいパスワードを入力してください', class: password_class, id: 'password' %>
       <small class="form-text text-muted pt-1"> ※ パスワードは半角英数字８文字以上で入力してください。</small>
     </div>
     <div class="form-group mt-4">
-      <%= f.label :password_confirmation, "パスワード（確認）" %><span class="essential-icon">必須</span>
+      <%= f.label :password_confirmation, "パスワード（確認）" %>
+      <% if controller.controller_name == 'registrations' && controller.action_name == 'new' %>
+        <span class="essential-icon">必須</span>
+      <% end %>
       <%= f.password_field :password_confirmation, autofocus: true, autocomplete: 'new-password', placeholder: '確認のため、もう一度入力してください', class: password_confirmation_class %>
     </div>
     <div class="submit-button text-center">
