--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="user-edit col-md-8 offset-md-2 mb-5 pb-5">
       <h2 class="border-heading-bottom mb-5">ご登録情報編集</h2>
-      <%= render 'shared/user-form', model: current_user, url: users_information_path, submit_text: '編集内容を保存する', password_class: 'form-control validate[minSize[8], custom[onlyLetterNumber]] mt-2', password_confirmation_class: 'form-control validate[minSize[8], custom[onlyLetterNumber]] mt-2' %>
+      <%= render 'shared/user-form', model: current_user, url: users_information_path, submit_text: '編集内容を保存する' %>
     </div>
   </div>
 </div>
