--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,6 +3,7 @@
 <%= render 'shared/backpage' %>
 
 <div class="container">
+  <%= render 'shared/error_messages', obj: @user %>
   <div class="row">
     <div class="signup col-md-8 offset-md-2 mb-5 pb-5">
       <h2 class="border-heading-bottom mb-5">新規登録</h2>
