--- a/app/views/shared/_user-form.html.erb
+++ b/app/views/shared/_user-form.html.erb
@@ -4,27 +4,27 @@
       <%= f.label 'お名前' %><span class="essential-icon">必須</span>
       <div class="row mt-2 pl-4">
         <%= f.label :firstname, '（姓）', class: 'pt-1 pr-3' %>
-        <%= f.text_field :firstname, autofocus: true, autocomplete: 'firstname', placeholder: '山田', class: 'form-control col-lg-4 col-3 validate[required] mr-lg-5' %>
+        <%= f.text_field :firstname, autofocus: true, autocomplete: 'firstname', placeholder: '例：山田', class: 'form-control col-lg-4 col-3 validate[required] mr-lg-5' %>
         <%= f.label :lastname, '（名）', class: 'pt-1 pr-3' %>
-        <%= f.text_field :lastname, autofocus: true, autocomplete: 'lastname', placeholder: '太郎', class: 'form-control col-lg-4 col-3 validate[required]' %>
+        <%= f.text_field :lastname, autofocus: true, autocomplete: 'lastname', placeholder: '例：太郎', class: 'form-control col-lg-4 col-3 validate[required]' %>
       </div>
     </div>
     <div class="form-group mt-4">
       <%= f.label 'フリガナ' %><span class="essential-icon">必須</span>
       <div class="row mt-2 pl-4">
         <%= f.label :kana_firstname, '（姓）', class: 'pt-1 pr-3' %>
-        <%= f.text_field :kana_firstname, autofocus: true, autocomplete: 'kana_firstname', placeholder: 'ヤマダ', class: 'form-control col-lg-4 col-3 validate[required, custom[katakana]] mr-lg-5' %>
+        <%= f.text_field :kana_firstname, autofocus: true, autocomplete: 'kana_firstname', placeholder: '例：ヤマダ', class: 'form-control col-lg-4 col-3 validate[required, custom[katakana]] mr-lg-5' %>
         <%= f.label :kana_lastname, '（名）', class: 'pt-1 pr-3' %>
-        <%= f.text_field :kana_lastname, autofocus: true, autocomplete: 'kana_lastname', placeholder: 'タロウ', class: 'form-control col-lg-4 col-3 validate[required, custom[katakana]]' %>
+        <%= f.text_field :kana_lastname, autofocus: true, autocomplete: 'kana_lastname', placeholder: '例：タロウ', class: 'form-control col-lg-4 col-3 validate[required, custom[katakana]]' %>
       </div>
     </div>
     <div class="form-group mt-5">
       <%= f.label :email, 'メールアドレス' %><span class="essential-icon">必須</span>
-      <%= f.email_field :email, autofocus: true, autocomplete: 'email', placeholder: 'lybody@example.com', class: 'form-control validate[required, custom[email]] mt-2' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: 'email', placeholder: '例：lybody@example.com', class: 'form-control validate[required, custom[email]] mt-2' %>
     </div>
     <div class="form-group mt-5">
       <%= f.label :phone_number, '電話番号' %><span class="essential-icon">必須</span>
-      <%= f.text_field :phone_number, autofocus: true, autocomplete: 'phone_number', placeholder: '00011112222', class: 'form-control validate[required, custom[phone]] mt-2' %>
+      <%= f.text_field :phone_number, autofocus: true, autocomplete: 'phone_number', placeholder: '例：00011112222', class: 'form-control validate[required, custom[phone]] mt-2' %>
       <small class="form-text text-muted pt-1"> ※ 電話番号はハイフン（-）無しで記入してください。</small>
     </div>
     <% if controller.controller_name == 'registrations' && controller.action_name == 'new' %>
