[add] instructor users page

--- a/app/views/instructors/instructors/show.html.erb
+++ b/app/views/instructors/instructors/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'インストラクターマイページ | LYbody') %>
+<% provide(:title, 'マイページ | LYbody - インストラクター') %>
 
 <%= render 'shared/backpage' %>
 
