--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -184,6 +184,14 @@ footer {
   table-layout: fixed;
   overflow-wrap: break-word;
   word-wrap: break-word;
+
+  td {
+    border-top: 1px solid #8b8b8b !important;
+  }
+
+  .table-sm-width {
+    width: 15%;
+  }
 }
 
 
@@ -254,6 +262,22 @@ footer {
     font-size: 0.9rem;
 
     &:hover {
+      opacity: 0.6;
+      transition: opacity .3s ease;
+    }
+  }
+}
+
+
+// instructors/users page
+
+.users {
+  .text-sm {
+    font-size: 1.3rem;
+  }
+
+  table {
+    a:hover {
       opacity: 0.6;
       transition: opacity .3s ease;
     }
