[add] instructors path to header and footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
         <p>LYbody</p>
       </div>
       <ul class="footer-nav d-flex">
-        <li class="mr-5"><%= link_to "インストラクター", root_path %></li>
+        <li class="mr-5"><%= link_to "インストラクター", instructors_path %></li>
         <li><%= link_to "お問い合わせ", root_path %></li>
       </ul>
     </div>
