--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to instructors_path, class: 'nav-link text-center' do %>
+            <%= link_to instructors_mypage_path, class: 'nav-link text-center' do %>
               My Page <br> マイページ
             <% end %>
           </li>
@@ -31,7 +31,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to root_path, class: 'nav-link text-center' do %>
+            <%= link_to instructors_path, class: 'nav-link text-center' do %>
               Instructor <br> インストラクター
             <% end %>
           </li>
@@ -47,7 +47,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to root_path, class: 'nav-link text-center' do %>
+            <%= link_to instructors_path, class: 'nav-link text-center' do %>
               Instructor <br> インストラクター
             <% end %>
           </li>
